--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+# Reason of this fork
 
+I wanted to update this utility to better fit my wayland setup.
+
+## Can you use it ?
+
+Sure, do whatever you want with it. Use it, fork it, modify it, etc.
